<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_go_connect"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/tv_connect_tip"
        android:gravity="center"
        android:text="@string/qxljznb" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E4E4E4" />

        <TextView
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/go_connect"
            android:textColor="#59B1F1" />

    </LinearLayout>

</LinearLayout>
