<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_go_connect"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_close"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/icon_close" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_pen_name"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:maxLength="15"
        android:text="@string/pen_name"
        android:textColor="#151515"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_pen_mac"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pen_address"
        android:textColor="#505050"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_pen_battery"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pen_battery"
        android:textColor="#505050"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#E4E4E4" />

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_change_pen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change_pen"
            android:textColor="#8492A6"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
