<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_device"
    android:orientation="vertical"
    android:padding="15dp"
    android:paddingLeft="@dimen/dp_16">


    <TextView
        android:id="@+id/point_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pen_address"
        android:layout_marginBottom="@dimen/dp_10"
        android:textColor="#333333"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_marginBottom="@dimen/dp_10"
        android:id="@+id/point_original_data_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/point_original_data_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_originl_data"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/point_original_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pen_address"
            android:textColor="#333333"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/point_read_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pen_formatting"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/point_read_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pen_address"
            android:textColor="#333333"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>